@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.explore_with_me.WebClientService;
 import ru.practicum.explore_with_me.dto.StatsResponseDto;
+import ru.practicum.explore_with_me.dto.comment.CommentEvent;
 import ru.practicum.explore_with_me.dto.event.*;
 import ru.practicum.explore_with_me.dto.filter.EventFilter;
 import ru.practicum.explore_with_me.dto.request.EventRequestStatusUpdateRequest;
@@ -25,6 +26,7 @@ import ru.practicum.explore_with_me.mapper.LocationMapper;
 import ru.practicum.explore_with_me.mapper.UserMapper;
 import ru.practicum.explore_with_me.model.*;
 import ru.practicum.explore_with_me.repository.CategoryRepository;
+import ru.practicum.explore_with_me.repository.CommentRepository;
 import ru.practicum.explore_with_me.repository.EventRepository;
 import ru.practicum.explore_with_me.repository.UserRepository;
 import ru.practicum.explore_with_me.service.request.ParticipationRequestService;
@@ -39,6 +41,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toMap;
 import static ru.practicum.explore_with_me.model.QEvent.event;
 
 @Slf4j
@@ -57,14 +60,13 @@ public class EventServiceImpl implements EventService {
     private final ParticipationRequestService participationRequestService;
     private final LocationMapper locationMapper;
     private static final String nameApp = "ewm-service";
+    private final CommentRepository commentRepository;
 
     @Override
     @Transactional
     public EventFullDto create(Long userId, NewEventDto newEventDto) {
-        User initiator = getUserOrThrow(userId,
-                "Не найден пользователь ID = {}");
-        Category category = getCatOrThrow(newEventDto.getCategoryId(),
-                "Не найдена категория ID = {}");
+        User initiator = getUserOrThrow(userId, "Не найден пользователь ID = {}");
+        Category category = getCatOrThrow(newEventDto.getCategoryId(), "Не найдена категория ID = {}");
 
         checkDateEvent(newEventDto.getEventDate(), 2);
 
@@ -86,8 +88,21 @@ public class EventServiceImpl implements EventService {
         Pageable pageable = PageRequest.of(from, size, Sort.by("id").ascending());
 
         Predicate predicate = event.initiator.id.ne(userId);
-        List<EventShortDto> result = eventRepository.findAll(predicate, pageable)
-                .stream().map(eventMapper::mapToShortDto).collect(Collectors.toList());
+
+        List<Event> events = eventRepository.findAll(predicate, pageable).toList();
+        List<Long> eventIds = events.stream().map(Event::getId).collect(Collectors.toList());
+        List<CommentEvent> commentsCount = commentRepository.getCommentsEvents(eventIds);
+
+        Map<Long, Long> commentsMap = commentsCount.stream()
+                .collect(toMap(CommentEvent::getEventId, CommentEvent::getCommentCount));
+
+        for (Event eve : events) {
+            eve.setComments(commentsMap.getOrDefault(eve.getId(), 0L));
+        }
+
+        List<EventShortDto> result = events.stream()
+                .map(eventMapper::mapToShortDto).collect(Collectors.toList());
+
         log.info("getMyEvents ({} событий), userId = {} и name = {}",
                 result.size(), userFromDb.getId(), userFromDb.getName());
         return result;
@@ -238,6 +253,7 @@ public class EventServiceImpl implements EventService {
         Map<Event, List<ParticipationRequest>> confirmedRequests = utilService.prepareConfirmedRequest(events);
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(eventId));
         log.info("updateEventAdmin ID = {}", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -259,6 +275,7 @@ public class EventServiceImpl implements EventService {
         Map<Event, List<ParticipationRequest>> confirmedRequests = utilService.prepareConfirmedRequest(events);
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("getEventById ID = {}", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -274,6 +291,7 @@ public class EventServiceImpl implements EventService {
         Map<Event, List<ParticipationRequest>> confirmedRequests = utilService.prepareConfirmedRequest(events);
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос события ID = {}", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -309,6 +327,7 @@ public class EventServiceImpl implements EventService {
         Map<Event, List<ParticipationRequest>> confirmedRequests = utilService.prepareConfirmedRequest(events);
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Выполнено обновление события ID = {}", eventId);
 
         return eventMapper.mapFromModelToFullDto(result);
@@ -336,6 +355,7 @@ public class EventServiceImpl implements EventService {
         eventFromDb.setPublishedOn(LocalDateTime.now());
         Event saved = eventRepository.save(eventFromDb);
         log.info("Опубликовано событие с ID = {}", eventId);
+        saved.setComments(commentRepository.countCommentsForEvent(saved.getId()));
 
         return eventMapper.mapFromModelToFullDto(saved);
     }
